refactor: switch mapquest out for bing maps

--- a/templates/route-duration.hbs
+++ b/templates/route-duration.hbs
@@ -11,6 +11,6 @@
 </form>
 {{#if route}}
   <h1>Is this route correct?</h1>
-  <p>From {{route.locations.[0].adminArea5}}, {{route.locations.[0].adminArea1}} to {{route.locations.[1].adminArea5}}, {{route.locations.[1].adminArea1}} with an estimated duration of {{route.formattedTime}} hours.</p>
+  <p>From {{route.startLocation.name}} to {{route.endLocation.name}} with an estimated duration of {{timeFormatter route.travelDuration}}.</p>
   <button data-confirm>Confirm</button>
 {{/if}}
