chore: add auth check to routing and add a basic font

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,10 +1,3 @@
-<h1>A SPA using the Spotify API</h1>
-<p>What it's exactly going to do, I don't know yet</p>
-<article class="hidden" data-profile>
-  <h2 data-name></h2>
-  <img data-image src="" alt="" />
-  <p data-country>Country: </p>
-  <p data-followers>Followers: </p>
-  <ul data-externals></ul>
-</article>
+<h1>Triptop</h1>
+<p>Create the perfect playlist for your roadtrip!</p>
 <button data-login>Login</button>
