--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,5 @@
-.hidden {
-  display: none;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap');
+
+body {
+  font-family: Avenir, Raleway, sans-serif;
 }
