--- a/templates/generate.hbs
+++ b/templates/generate.hbs
@@ -7,7 +7,7 @@
 {{/if}}
 
 {{#unless generating}}
-  <h1>Your Triplist</h1>
+  <h1>Your Triptoplist</h1>
   {{#each list}}
     <p>{{this.name}}</p>
   {{/each}}
