--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,3 +1,9 @@
-<h1>Triptop</h1>
-<p>Create the perfect playlist for your roadtrip!</p>
-<button data-login>Login</button>
+<header>
+  <h1>Triptop</h1>
+  <p>Create your perfect roadtrip playlist</p>
+</header>
+<button class="button-spotify" data-login>Login with Spotify</button>
+<footer>
+  Powered By
+  <img src="/assets/spotify_logo.png" alt="Spotify" />
+</footer>
