--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,403 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap');
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+:root {
+  /* @link https://utopia.fyi/generator-mk-ii?c=320,16,1.25,1440,16,1.5,5,2, */
+  --step--2: clamp(0.64rem, 0.6959rem + -0.2795vw, 0.4444rem);
+  --step--1: clamp(0.8rem, 0.838rem + -0.1902vw, 0.6669rem);
+  --step-0: clamp(1rem, 1rem + 0vw, 1rem);
+  --step-1: clamp(1.25rem, 1.1786rem + 0.3571vw, 1.5rem);
+  --step-2: clamp(1.5625rem, 1.3661rem + 0.9821vw, 2.25rem);
+  --step-3: clamp(1.9531rem, 1.5469rem + 2.0313vw, 3.375rem);
+  --step-4: clamp(2.4413rem, 1.6923rem + 3.7446vw, 5.0625rem);
+  --step-5: clamp(3.0519rem, 1.7542rem + 6.4884vw, 7.5938rem);
+
+  --base-margin: 1.25rem;
+  --half-margin: calc(var(--base-margin) / 2);
+  --double-margin: calc(var(--base-margin) * 2);
+
+  --dark-green: #1aa34a;
+  --light-green: #1ed760;
+  --green: #1db954;
+  --green-transparent: #1db95440;
+  --blue: #00a8e0;
+  --blue-transparent: #00a8e040;
+  --orange: #f6713c;
+  --black: #191414;
+  --white: #ffffff;
+  --white-low-transparent: #ffffff40;
+  --white-transparent: #ffffff80;
+  --grey: #858585;
+
+  --primary: var(--black);
+  --secondary: var(--white);
+  --tertiary: var(--blue);
+  --disabled: var(--grey);
+  --background: var(--orange);
+}
 
 body {
-  font-family: Avenir, Raleway, sans-serif;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  line-height: 1.5;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1.125;
+}
+
+h1 {
+  margin: 0;
+  font-size: var(--step-4);
+  font-weight: 700;
+  color: var(--secondary);
+}
+
+p,
+button,
+a,
+li,
+span {
+  font-size: var(--step-0);
+}
+
+#app {
+  width: 100%;
+  min-height: 100vh;
+  height: 100%;
+}
+
+button,
+.button {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  width: max-content;
+  border: none;
+  cursor: pointer;
+  border-radius: 0.75rem;
+  background: var(--tertiary);
+  box-shadow: 0px 8px 8px -8px var(--tertiary-transparent);
+  color: var(--secondary);
+  font-weight: bold;
+  font-size: var(--step-0);
+  padding: 1.125em 1.25em;
+  transition: all 0.2s ease-in-out;
+}
+
+a.button {
+  text-decoration: none;
+}
+
+button:hover,
+.button:hover,
+button:focus,
+.button:focus {
+  box-shadow: 0px 8px 16px -8px var(--tertiary-transparent);
+}
+
+button:disabled {
+  background: var(--secondary);
+  border: 1px solid var(--disabled);
+  box-shadow: none;
+  color: var(--disabled);
+  cursor: not-allowed;
+}
+
+.button-spotify {
+  width: auto;
+  padding: 1.125em 3em;
+  background: var(--green);
+  color: var(--secondary);
+  text-transform: uppercase;
+  border-radius: 2.125em;
+  box-shadow: 0px 8px 8px -8px var(--green-transparent);
+}
+
+.button-spotify:hover,
+.button-spotify:focus {
+  box-shadow: 0px 8px 16px -8px var(--green-transparent);
+  background: var(--light-green);
+}
+
+.button-spotify:active {
+  background: var(--dark-green);
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  font-size: var(--step-0);
+}
+
+label + label {
+  margin-top: var(--base-margin);
+}
+
+* + button {
+  margin-top: var(--double-margin);
+}
+
+input[type='text'] {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border: none;
+  background: var(--orange);
+  font-size: var(--step-1);
+  display: block;
+  padding: 0.75rem;
+  border-radius: 0.75rem;
+  color: white;
+}
+
+input::placeholder {
+  color: var(--white-transparent);
+}
+
+.details-overview {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: auto auto;
+}
+
+.details-overview li {
+  display: flex;
+  flex-direction: column-reverse;
+  font-weight: bold;
+  font-size: var(--step-1);
+  text-align: center;
+  padding: 1.125rem;
+  position: relative;
+  line-height: 1em;
+}
+
+.details-overview li span {
+  display: block;
+  margin-top: 0.3em;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: var(--step-0);
+}
+
+.details-overview li:before,
+.details-overview li:after {
+  content: '';
+  position: absolute;
+  background: var(--primary);
+}
+
+.details-overview li:nth-child(-n + 2):before,
+.details-overview li:nth-child(n + 3):before {
+  left: 1.125rem;
+  width: calc(100% - 2.25rem);
+  height: 1px;
+}
+
+.details-overview li:nth-child(n + 3):before {
+  top: 0px;
+}
+
+.details-overview li:nth-child(-n + 2):before {
+  bottom: 0px;
+}
+
+.details-overview li:after {
+  top: 1.125rem;
+  height: calc(100% - 2.25rem);
+  width: 1px;
+}
+
+.details-overview li:nth-child(odd):after {
+  right: 0px;
+}
+
+.details-overview li:nth-child(even):after {
+  left: 0px;
+}
+
+.details-overview-light {
+  color: var(--secondary);
+}
+
+.details-overview-light li:before,
+.details-overview-light li:after {
+  background: var(--secondary);
+}
+
+@media screen and (min-width: 80rem) {
+  .details-overview li {
+    font-size: var(--step-2);
+  }
+
+  .details-overview li span {
+    font-size: var(--step-1);
+  }
+}
+
+[id^='tracks'] {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#tracks-grid {
+  display: flex;
+  flex-wrap: wrap;
+  padding: var(--step-1);
+  padding-left: 0;
+}
+
+#tracks-grid li {
+  flex: 0 0 calc(50% - var(--base-margin));
+  font-size: var(--step-0);
+  font-weight: 500;
+  margin: var(--base-margin) 0 0 var(--base-margin);
+}
+
+#tracks-grid li img {
+  width: 100%;
+}
+
+#tracks-grid li span {
+  display: block;
+}
+
+#tracks-grid li span:first-of-type {
+  font-weight: 700;
+  font-size: var(--step-1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#tracks-grid input {
+  width: var(--step-1);
+  height: var(--step-1);
+  background: var(--tertiary);
+}
+
+@media screen and (min-width: 65rem) {
+  #tracks-grid li {
+    flex: 1 0 30rem;
+  }
+}
+
+progress[value]::-webkit-progress-bar {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: none;
+  width: 100%;
+  height: 3rem;
+  background: var(--white-low-transparent);
+  overflow: hidden;
+  border-radius: 0.75rem;
+}
+
+progress[value] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: none;
+  width: 100%;
+  height: 3rem;
+  background: var(--white-low-transparent);
+  overflow: hidden;
+  border-radius: 0.75rem;
+}
+
+::-webkit-progress-value {
+  background-color: var(--white);
+}
+
+::-moz-progress-bar {
+  background-color: var(--white);
+}
+
+#tracks-list {
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--base-margin);
+  padding: var(--base-margin);
+}
+
+#tracks-list li {
+  flex: 1 1 40rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: var(--half-margin);
+}
+
+#tracks-list img {
+  grid-column: 1;
+  width: 100%;
+}
+
+#tracks-list div {
+  grid-column: 2;
+}
+
+#tracks-list span {
+  display: block;
+}
+
+#tracks-list span:first-child {
+  font-weight: bold;
+  font-size: var(--step-1);
+  line-height: 1.125;
+}
+
+#tracks-list span:nth-child(2) {
+  font-weight: 500;
+  font-size: var(--step-0);
+  margin-bottom: var(--base-margin);
+}
+
+.fixed-button {
+  position: fixed;
+  bottom: var(--double-margin);
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 30rem;
+  width: calc(100% - var(--base-margin) * 2);
+  text-align: center;
+}
+
+@media screen and (min-width: 60rem) {
+  .fixed-button {
+    top: var(--base-margin);
+    right: var(--base-margin);
+    transform: unset;
+    left: unset;
+    bottom: unset;
+    width: max-content;
+  }
+
+  .sticky-button {
+    position: sticky;
+    top: var(--step-1);
+    left: calc(100% - var(--base-margin));
+    bottom: unset;
+    transform: translateX(calc(var(--base-margin) * -1));
+    width: max-content;
+    text-align: center;
+  }
 }
