--- a/templates/result.hbs
+++ b/templates/result.hbs
@@ -3,6 +3,6 @@
   <p>Your Triptop list is saved!</p>
   <img src='{{playlist.images.0.url}}' alt='Artwork of {{playlist.name}}'>
   <p>{{playlist.name}}</p>
-  <a href='{{playlist.external_urls.0.url}}' class="button button-spotify">Open in Spotify</a>
+  <a href='{{playlist.external_urls.spotify}}' target=_blank class="button button-spotify">Open in Spotify</a>
   <a href='#trip-duration' class="button fixed-button">Generate another</a>
 </main>
