--- a/styles/main.css
+++ b/styles/main.css
@@ -401,3 +401,62 @@ progress[value] {
     text-align: center;
   }
 }
+
+.pill {
+  font-size: var(--step-0);
+  border-radius: 0.75rem;
+  padding: 0.625rem;
+  display: flex;
+  align-items: center;
+  font-weight: normal;
+  color: var(--secondary);
+  width: 100%;
+}
+
+.pill img {
+  display: block;
+  width: 1.25rem !important;
+  height: 1.25rem;
+  object-fit: contain;
+  margin-right: 0.625rem;
+}
+
+.pill img:not(:only-child):last-of-type {
+  margin-right: 0px;
+  margin-left: auto;
+}
+
+.pill.green {
+  background: var(--green);
+}
+
+.pill.playing img:first-of-type {
+  animation: play 5s linear infinite;
+}
+
+@keyframes play {
+  to {
+    transform: rotate(1turn);
+  }
+}
+
+.pill:first-of-type {
+  margin-top: auto;
+}
+
+.pill + .pill {
+  margin-top: var(--half-margin);
+}
+
+.pill.orange {
+  background: var(--orange);
+}
+
+.hidden {
+  clip-path: inset(50%);
+  user-select: none;
+  pointer-events: none;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+}
