--- a/templates/generate.hbs
+++ b/templates/generate.hbs
@@ -61,5 +61,5 @@
       {{/each}}
     </ul>
   </main>
-  <audio data-audio volume="0.05" class="hidden"></audio>
+  <audio data-audio class="hidden"></audio>
 {{/unless}}
