--- a/styles/main.css
+++ b/styles/main.css
@@ -173,7 +173,7 @@ input::placeholder {
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 1fr 1fr;
 }
 
 .details-overview li {
@@ -240,13 +240,43 @@ input::placeholder {
   background: var(--secondary);
 }
 
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 60rem) {
+  .details-overview {
+    grid-template-columns: repeat(4, 1fr);
+    width: max-content;
+    max-width: unset;
+  }
+
   .details-overview li {
     font-size: var(--step-2);
+    white-space: nowrap;
   }
 
   .details-overview li span {
     font-size: var(--step-1);
+  }
+
+  .details-overview li:first-child:before,
+  .details-overview li:last-child:before {
+    content: none;
+  }
+
+  .details-overview li:nth-child(2):before,
+  .details-overview li:nth-child(3):before {
+    content: '';
+    top: 1.125rem;
+    height: calc(100% - 2.25rem);
+    width: 1px;
+  }
+
+  .details-overview li:nth-child(2):before {
+    right: 0px;
+    left: unset;
+  }
+
+  .details-overview li:nth-child(3):before {
+    left: 0px;
+    right: unset;
   }
 }
 
@@ -370,6 +400,17 @@ progress[value] {
   font-weight: 500;
   font-size: var(--step-0);
   margin-bottom: var(--base-margin);
+}
+
+@supports (-webkit-appearance: -apple-pay-button) {
+  #tracks-list {
+    padding: var(--base-margin) 0 var(--base-margin) var(--base-margin);
+  }
+
+  #tracks-list li {
+    margin-right: var(--base-margin);
+    margin-bottom: var(--base-margin);
+  }
 }
 
 .fixed-button {
