--- a/styles/list-favourites.css
+++ b/styles/list-favourites.css
@@ -1,44 +1,18 @@
 [class='/list-favourites'] hgroup {
+  max-width: 50vw;
   padding: var(--step-1);
   color: var(--secondary);
   pointer-events: none;
 }
 
-[class='/list-favourites'] hgroup:before {
-  content: '';
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100vh;
-  z-index: -1;
+[class='/list-favourites'] {
   background: radial-gradient(
-      circle at top center,
+      circle at 15vw -35vw,
       var(--orange),
-      var(--orange) 55%,
-      transparent 55%
+      var(--orange) clamp(35rem, 60vw, 80rem),
+      transparent clamp(35rem, 60vw, 80rem)
     )
     no-repeat;
-  background-size: 200% 200%;
-  background-position: 65% 95%;
-}
-
-@media screen and (min-width: 80rem) {
-  [class='/list-favourites'] hgroup:before {
-    background-position: 65% 105%;
-  }
-}
-
-@media screen and (min-width: 120rem) {
-  [class='/list-favourites'] hgroup:before {
-    background-position: 76% 118%;
-  }
-}
-
-@media screen and (min-width: 160rem) {
-  [class='/list-favourites'] hgroup:before {
-    background-position: 80% 135%;
-  }
 }
 
 [class='/list-favourites'] h2 {
