--- a/styles/generate.css
+++ b/styles/generate.css
@@ -113,3 +113,35 @@
   display: flex;
   flex-direction: column;
 }
+
+[class='/generate'] #modify-list {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: var(--step-0);
+}
+
+[class='/generate'] #modify-list div {
+  flex: 1 0 20rem;
+}
+
+[class='/generate'] #modify-list *:not(button) {
+  width: 100%;
+  height: auto;
+}
+
+[class='/generate'] #modify-list label {
+  font-size: var(--step-1);
+  font-weight: bold;
+}
+
+@supports (-webkit-appearance: -apple-pay-button) {
+  [class='/generate'] #modify-list div:first-child {
+    margin-right: var(--base-margin);
+  }
+}
+
+@media screen and (max-width: 43rem) {
+  [class='/generate'] #modify-list div:first-child {
+    margin: 0;
+  }
+}
